# babble

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  main.py  pyproject.toml  requirements.txt  temp.py  tox.ini
babble/: __init__.py  api.py  babbler.py  exceptions.py  types.py  utils.py
babble/algorithms/: __init__.py  base.py  flowmur.py  noise.py  ultrasonic_noise.py
babble/eval_models/StableAudio/: stable_audio_tuning.ipynb
babble/tracks_generators/: __init__.py  base.py  spotify.py
docs/: algorithms.md  conf.py  experiments.md  fine_tuning.md  index.rst  installation.rst  modules.rst  tracks_generators.md
src/babble/: __init__.py  api.py  babbler.py  exceptions.py  types.py  utils.py
src/babble/algorithms/: __init__.py  noise.py  ultrasonic_noise.py
src/babble/eval_models/StableAudio/: custom_metadata.py  stable_audio_tuning.ipynb  stableaudio.py
src/babble/eval_models/StableAudio/conf/: dataset.json  model.json
src/babble/samples_generators/: __init__.py  base.py  spotify.py
src/babble/tracks_generators/: base.py  spotify.py
tests/: test_babble.py  test_tracks_generators.py  test_trigger.py  test_utils.py
